Fixed whitespace and hierachy UI issues on add advert componenet

--- a/src/app/components/add-advert/add-advert.component.scss
+++ b/src/app/components/add-advert/add-advert.component.scss
@@ -8,6 +8,10 @@
 	height: 60vh;
 }
 
+.form{
+	margin-top: 4rem;
+}
+
 .send-button {
 	background: #62ca6b;
 	width: 100%;
@@ -24,12 +28,20 @@ input {
 		font-size: 1.8rem;
 	}
 }
+.form-field{
+	margin-bottom: 2rem;
+}
 
 .my-input {
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 	cursor: text;
 	padding: 8px 10px;
 	transition: border 0.1s linear;
+	margin-bottom: 2rem;
+}
+
+.labelled-input{
+	margin-top: -1rem;
 }
 
 h1 {
@@ -54,6 +66,7 @@ h2 {
 .btn-row{
 	display: flex;
 	justify-content: space-between;
+	margin-top: 3rem;
 	// flex-direction: column;
 	button{
 		width: 40%;
